Auto stash before merge of "master" and "electroJim/master"

--- a/src/app/modules/article/pages/welcome/welcome.component.html
+++ b/src/app/modules/article/pages/welcome/welcome.component.html
@@ -2,6 +2,9 @@
   welcome works!
   
 </p>
-<app-photos-horizontal-scroll></app-photos-horizontal-scroll>
+<!-- <app-photos-horizontal-scroll></app-photos-horizontal-scroll> -->
+
+<!-- <div [froalaEditor]="inputModel"></div> -->
+<app-text-editor> </app-text-editor>
 
 
