text editor component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <!-- <router-outlet></router-outlet> -->
 <!-- <div [froalaEditor]="getOptions()">Hello, Froala!</div> -->
-<textarea [froalaEditor]="getOptions()">Hello, Froala!</textarea>
+<!-- <textarea [froalaEditor]="getOptions()">Hello, Froala!</textarea> -->
+<app-text-editor></app-text-editor>
 
